# bnp

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/bnp/: bnp.h
source/bnp/: bnp.cpp
source/test/: test.cpp  test.h  test_main.cpp
source/viewer/: bnp_viewer.cpp
